--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "start-pingpong": "nodemon pingpong.js"
+    "start-pingpong": "nodemon pingpong.js",
+    "build": "cross-env NODE_ENV=production webpack --config ./apps/algorithms/webpack.config.js --mode=production",
+    "dev": "cross-env NODE_ENV=development webpack --config ./apps/algorithms/webpack.config.js --mode=development",
+    "lint": "tslint --project ./apps/algorithms/tsconfig.json -c ./apps/tslint.json"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +16,22 @@
   "dependencies": {
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
+  },
+  "devDependencies": {
+    "@types/socket.io": "^2.1.8",
+    "@types/socket.io-client": "^1.4.33",
+    "cross-env": "^7.0.2",
+    "css-loader": "^3.6.0",
+    "less-loader": "^6.1.3",
+    "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "terser-webpack-plugin": "^3.0.6",
+    "ts-loader": "^7.0.5",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "tslint": "^6.1.2",
+    "tslint-immutable": "^6.0.1",
+    "typescript": "^3.9.6",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   }
 }
