--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start-pingpong": "nodemon pingpong.js",
     "build": "cross-env NODE_ENV=production webpack --config ./apps/algorithms/webpack.config.js --mode=production",
     "dev": "cross-env NODE_ENV=development webpack --config ./apps/algorithms/webpack.config.js --mode=development",
-    "lint": "tslint --project ./apps/algorithms/tsconfig.json -c ./apps/tslint.json"
+    "lint": "eslint -c ./apps/.eslintrc.js ./apps/algorithms/src/**/*.ts"
   },
   "keywords": [],
   "author": "",
@@ -20,16 +20,17 @@
   "devDependencies": {
     "@types/socket.io": "^2.1.8",
     "@types/socket.io-client": "^1.4.33",
+    "@typescript-eslint/eslint-plugin": "^3.5.0",
+    "@typescript-eslint/parser": "^3.5.0",
     "cross-env": "^7.0.2",
     "css-loader": "^3.6.0",
+    "eslint": "^7.3.1",
     "less-loader": "^6.1.3",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "terser-webpack-plugin": "^3.0.6",
     "ts-loader": "^7.0.5",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "tslint": "^6.1.2",
-    "tslint-immutable": "^6.0.1",
     "typescript": "^3.9.6",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
