--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.9.6",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-merge": "^4.2.2"
   }
 }
