--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "cross-env webpack --config ./apps/algorithms/webpack.config.js --mode=development",
     "lint-client": "eslint -c ./apps/.eslintrc.js ./apps/**/*.ts",
     "lint-server": "eslint -c .eslintrc .",
-    "tool": "node ./scripts/index.js"
+    "scripts": "node ./scripts/index.js"
   },
   "keywords": [],
   "author": "",
