--- a/.eslintrc
+++ b/.eslintrc
@@ -6,5 +6,8 @@
   },
   "rules": {
     "no-console": "off",
+    "quotes": ["warn", "single", {
+      "allowTemplateLiterals": true
+    }]
   }
 }
