--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start-server": "nodemon server.js",
     "start-pingpong": "nodemon pingpong.js",
-    "build": "cross-env webpack --config ./apps/algorithms/webpack.config.js --mode=production",
+    "build": "cross-env webpack --config ./apps/algorithms/webpack.config.js --mode=production --progress",
     "dev": "cross-env webpack --config ./apps/algorithms/webpack.config.js --mode=development --watch",
     "lint-client": "eslint -c ./apps/.eslintrc.js ./apps/**/*.ts",
     "lint-server": "eslint -c .eslintrc .",
@@ -18,9 +18,11 @@
   "author": "Zhouyang Ye",
   "license": "ISC",
   "dependencies": {
+    "atat-common": "file:./apps/common",
     "chalk": "^4.1.0",
     "clear": "^0.1.0",
     "figlet": "^1.4.0",
+    "single-line-log": "^1.1.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
   },
