--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start-server": "nodemon server.js",
     "start-pingpong": "nodemon pingpong.js",
-    "build": "cross-env webpack --config ./apps/common/webpack.config.js --mode=production --progress",
-    "dev": "cross-env webpack --config ./apps/common/webpack.config.js --mode=development --watch",
+    "build": "npm run scripts -- build",
+    "dev": "npm run scripts -- dev",
+    "lint": "npm run lint-client && npm run lint-server",
     "lint-client": "eslint -c ./apps/.eslintrc.js ./apps/**/*.ts",
     "lint-server": "eslint -c .eslintrc .",
     "link-common": "cd ./apps/common && npm link && cd ../.. && npm link atat-common",
