--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "build": "npm run scripts -- build",
     "dev": "npm run scripts -- dev",
     "lint": "npm run lint-client && npm run lint-server",
-    "lint-client": "eslint -c ./apps/.eslintrc.js ./apps/**/*.ts",
-    "lint-server": "eslint -c .eslintrc .",
+    "lint-client": "eslint -c apps/.eslintrc --ignore-path apps/.eslintignore apps/**/*.ts",
+    "lint-server": "eslint -c .eslintrc --ignore-path .eslintignore **/*.js",
     "link-common": "cd ./apps/common && npm link && cd ../.. && npm link atat-common",
     "unlink-common": "npm unlink atat-common && cd ./apps/common && npm unlink",
     "sync-common": "npm install ./apps/common",
     "scripts": "node ./scripts/index.js"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.js": "eslint -c .eslintrc --ignore-path .eslintignore",
+    "apps/**/*.ts": "eslint -c apps/.eslintrc --ignore-path apps/.eslintignore"
   },
   "keywords": [],
   "author": "Zhouyang Ye",
@@ -38,7 +47,9 @@
     "cross-env": "^7.0.2",
     "css-loader": "^3.6.0",
     "eslint": "^7.3.1",
+    "husky": "^4.2.5",
     "less-loader": "^6.1.3",
+    "lint-staged": "^10.2.11",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "terser-webpack-plugin": "^3.0.6",
