feat: add clean scripts

--- a/apps/common/tsconfig.json
+++ b/apps/common/tsconfig.json
@@ -3,6 +3,7 @@
     "experimentalDecorators": true,
     "outDir": "./lib/",
     "sourceMap": true,
+    "declaration": true,
     "noImplicitAny": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
