--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start-pingpong": "nodemon pingpong.js",
     "build": "npm run scripts -- build",
     "dev": "npm run scripts -- dev",
+    "clean": "npm run scripts -- clean",
+    "clean-modules": "rm -rf node_modules",
     "lint": "npm run lint-client && npm run lint-server",
     "lint-client": "eslint -c apps/.eslintrc --ignore-path apps/.eslintignore apps/**/*.ts",
     "lint-server": "eslint -c .eslintrc --ignore-path .eslintignore **/*.js",
