--- a/server.config
+++ b/server.config
@@ -1,4 +1,13 @@
+// Server
+MODE=development
 WEB_PORT=18080
 PINGPONG_PORT=8080
 WEB_BASE_FOLDER=apps
 API_BASE_URL=api
+
+// Database
+HOSTNAME=localhost
+USER=root
+PASSWORD=
+DATABASE=atat
+LIMIT=10
