--- a/apps/common/tsconfig.json
+++ b/apps/common/tsconfig.json
@@ -12,7 +12,7 @@
     "baseUrl": ".",
     "rootDir": "src",
     "paths": {
-      "*": ["./src/*"]
+      "@/*": ["./src/*"]
     }
   },
   "include": [
