--- a/apps/intro/tsconfig.json
+++ b/apps/intro/tsconfig.json
@@ -11,7 +11,7 @@
     "baseUrl": ".",
     "rootDir": "src",
     "paths": {
-      "*": ["./src/*"]
+      "@/*": ["./src/*"]
     }
   },
   "include": [
