--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "author": "Zhouyang Ye",
   "license": "ISC",
   "dependencies": {
-    "atat-common": "file:./apps/common",
+    "atat-common": "file:apps/common",
     "chalk": "^4.1.0",
     "clear": "^0.1.0",
     "cli-cursor": "^3.1.0",
