--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "unlock": "rm -rf package-lock.json",
     "lint": "npm run lint-client && npm run lint-server",
     "lint-apps": "eslint -c apps/.eslintrc --ignore-path apps/.eslintignore apps/**/*.ts",
+    "lint-react": "eslint -c apps/react/.eslintrc --ignore-path apps/react/.eslintignore apps/react/**/*.tsx",
     "lint-server": "eslint -c .eslintrc --ignore-path .eslintignore **/*.js",
     "link-common": "cd ./apps/common && npm link && cd ../.. && npm link atat-common",
     "unlink-common": "npm unlink atat-common && cd ./apps/common && npm unlink",
@@ -25,7 +26,8 @@
   },
   "lint-staged": {
     "**/*.js": "eslint -c .eslintrc --ignore-path .eslintignore",
-    "apps/**/*.ts": "eslint -c apps/.eslintrc --ignore-path apps/.eslintignore"
+    "apps/**/*.ts": "eslint -c apps/.eslintrc --ignore-path apps/.eslintignore",
+    "apps/react/**/*.tsx": "eslint -c apps/react/.eslintrc --ignore-path apps/react/.eslintignore"
   },
   "keywords": [],
   "author": "Zhouyang Ye",
@@ -39,10 +41,14 @@
     "mysql": "^2.18.1",
     "node-cmd": "^3.0.0",
     "node-emoji": "^1.10.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
+    "@types/react": "^16.9.46",
+    "@types/react-dom": "^16.9.8",
     "@types/socket.io": "^2.1.8",
     "@types/socket.io-client": "^1.4.33",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
@@ -50,6 +56,7 @@
     "cross-env": "^7.0.2",
     "css-loader": "^3.6.0",
     "eslint": "^7.3.1",
+    "eslint-plugin-react": "^7.20.5",
     "husky": "^4.2.5",
     "less-loader": "^6.1.3",
     "lint-staged": "^10.2.11",
