--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "start-pingpong": "nodemon pingpong.js",
+    "start-majiang": "nodemon majiang.js",
     "build": "npm run scripts -- build",
     "dev": "npm run scripts -- dev",
     "clean": "npm run scripts -- clean",
     "unlock": "rm -rf package-lock.json",
-    "lint": "npm run lint-client && npm run lint-server",
+    "lint": "npm run lint-apps && npm run lint-server && npm run lint-stories",
     "lint-apps": "eslint -c apps/.eslintrc --ignore-path apps/.eslintignore apps/**/*.ts",
-    "lint-react": "eslint -c apps/react/.eslintrc --ignore-path apps/react/.eslintignore apps/react/**/*.tsx",
+    "lint-stories": "eslint -c apps/stories/.eslintrc --ignore-path apps/stories/.eslintignore apps/stories/**/*.tsx",
     "lint-server": "eslint -c .eslintrc --ignore-path .eslintignore **/*.js",
     "link-common": "cd ./apps/common && npm link && cd ../.. && npm link atat-common",
     "unlink-common": "npm unlink atat-common && cd ./apps/common && npm unlink",
