--- a/server.config
+++ b/server.config
@@ -1,7 +1,7 @@
 // Server
 MODE=development
 WEB_PORT=18080
-PINGPONG_PORT=8080
+MAJIANG_PORT=8080
 WEB_BASE_FOLDER=apps
 RESOURCES_BASE_FOLDER=resources
 API_BASE_URL=api
