--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "chalk": "^4.1.0",
     "clear": "^0.1.0",
     "cli-cursor": "^3.1.0",
+    "cookie": "^0.5.0",
     "figlet": "^1.4.0",
     "mysql": "^2.18.1",
     "node-cmd": "^3.0.0",
