--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,13 @@
 {
+  "parser": "@babel/eslint-parser",
   "extends": "eslint:recommended",
+  "root": true,
   "env": {
     "node": true,
     "es6": true
+  },
+  "parserOptions": {
+    "sourceType": "module"
   },
   "rules": {
     "no-console": "off",
