--- a/apps/.eslintrc
+++ b/apps/.eslintrc
@@ -4,8 +4,10 @@
     "plugin:@typescript-eslint/recommended",
     "eslint:recommended"
   ],
+  "root": true,
   "env": {
-    "browser": true
+    "browser": true,
+    "es6": true
   },
   "parserOptions": {
     "sourceType": "module"
