--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,11 @@
 {
   "compilerOptions": {
+    "module": "commonjs",
+    "target": "es6",
     "baseUrl": ".",
     "paths": {
       "@/*":["./*"]
     }
-  }
+  },
+  "exclude": ["node_modules"]
 }
