--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "npm run scripts -- dev",
     "clean": "npm run scripts -- clean",
     "unlock": "rm -rf package-lock.json",
-    "lint": "npm run lint-apps && npm run lint-server && npm run lint-stories",
+    "lint": "concurrently \"npm run lint-apps\" \"npm run lint-server\" \"npm run lint-stories\"",
     "lint-apps": "eslint -c apps/.eslintrc --ignore-path apps/.eslintignore apps/**/*.ts",
     "lint-stories": "eslint -c apps/stories/.eslintrc --ignore-path apps/stories/.eslintignore apps/stories/**/*.tsx",
     "lint-server": "eslint -c .eslintrc --ignore-path .eslintignore **/*.js",
@@ -38,26 +38,30 @@
     "clear": "^0.1.0",
     "cli-cursor": "^3.1.0",
     "cookie": "^0.5.0",
+    "crypto-js": "^4.1.1",
     "figlet": "^1.4.0",
     "mysql": "^2.18.1",
     "node-cmd": "^3.0.0",
     "node-emoji": "^1.10.0",
-    "react": "^16.13.1",
+    "react": "^18.1.0",
     "react-dom": "^16.13.1",
     "socket.io": "^2.4.0",
     "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
-    "@types/react": "^16.9.46",
-    "@types/react-dom": "^16.9.8",
+    "@babel/core": "^7.17.10",
+    "@babel/eslint-parser": "^7.17.0",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.3",
     "@types/socket.io": "^2.1.8",
     "@types/socket.io-client": "^1.4.33",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
+    "concurrently": "^7.1.0",
     "cross-env": "^7.0.2",
     "css-loader": "^3.6.0",
     "eslint": "^7.3.1",
-    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-react": "^7.29.4",
     "husky": "^4.2.5",
     "less-loader": "^6.1.3",
     "lint-staged": "^10.2.11",
