--- a/vscodeConifgs/settings.json
+++ b/vscodeConifgs/settings.json
@@ -6,13 +6,10 @@
   "editor.quickSuggestionsDelay": 20,
   "editor.mouseWheelScrollSensitivity": 2,
   "editor.formatOnSave": false,
-  "terminal.integrated.shell.windows": "C:\\Program Files\\Git\\bin\\bash.exe",
-  "terminal.integrated.shellArgs.windows": [
-    "-l"
-  ],
-  "eslint.workingDirectories": ["./", "./apps", "./apps/stories"],
+  "typescript.validate.enable": false,
+  "javascript.validate.enable": false,
+  "eslint.workingDirectories": [{ "mode": "auto" }, "./apps", "./apps/stories"],
   "window.zoomLevel": 0,
-  "typescript.tsdk": "C:\\Users\\zye08\\AppData\\Roaming\\npm\\node_modules\\typescript\\lib",
   "explorer.openEditors.visible": 0,
   "explorer.enableDragAndDrop": false,
   "explorer.autoReveal": true,
@@ -24,7 +21,6 @@
     "**/lib": true,
   },
   "files.defaultLanguage": "",
-  "editor.renderIndentGuides": false,
   "explorer.confirmDelete": false,
   "typescript.updateImportsOnFileMove.enabled": "never",
   "[javascript]": {
@@ -45,7 +41,7 @@
   "[less]": {
     "editor.defaultFormatter": "michelemelluso.code-beautifier"
   },
-  "workbench.editorAssociations": {
-    "*.ipynb": "jupyter.notebook.ipynb"
+  "files.associations": {
+    "*.js": "javascript"
   }
 }
