--- a/apps/.eslintrc
+++ b/apps/.eslintrc
@@ -1,16 +1,20 @@
 {
   "parser": "@typescript-eslint/parser",
   "extends": [
-    "plugin:@typescript-eslint/recommended",
-    "eslint:recommended"
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
   "root": true,
   "env": {
     "browser": true,
+    "node": true,
     "es6": true
   },
   "parserOptions": {
     "sourceType": "module"
+  },
+  "globals": {
+    "NodeJS": true
   },
   "rules": {
     "@typescript-eslint/no-var-requires": 0,
