--- a/apps/stories/.eslintrc
+++ b/apps/stories/.eslintrc
@@ -8,10 +8,14 @@
   "root": true,
   "env": {
     "browser": true,
+    "node": true,
     "es6": true
   },
   "parserOptions": {
     "sourceType": "module"
+  },
+  "globals": {
+    "NodeJS": true
   },
   "rules": {
     "@typescript-eslint/no-var-requires": 0,
