--- a/apps/.eslintrc
+++ b/apps/.eslintrc
@@ -18,7 +18,9 @@
   },
   "rules": {
     "@typescript-eslint/no-var-requires": 0,
+    "@typescript-eslint/no-use-before-define": 1,
     "no-var": 1,
-    "no-magic-numbers": "warn"
+    "no-magic-numbers": "warn",
+    "no-undef": "error"
   }
 }
