--- a/vscodeConifgs/settings.json
+++ b/vscodeConifgs/settings.json
@@ -6,8 +6,8 @@
   "editor.quickSuggestionsDelay": 20,
   "editor.mouseWheelScrollSensitivity": 2,
   "editor.formatOnSave": false,
-  "typescript.validate.enable": false,
-  "javascript.validate.enable": false,
+  "typescript.validate.enable": true,
+  "javascript.validate.enable": true,
   "eslint.workingDirectories": [{ "mode": "auto" }, "./apps", "./apps/stories"],
   "window.zoomLevel": 0,
   "explorer.openEditors.visible": 0,
