--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "npm run scripts -- build",
     "dev": "npm run scripts -- dev",
     "clean": "npm run scripts -- clean",
-    "password": "npm run scripts -- password",
+    "gen-password": "npm run scripts -- password",
     "unlock": "rm -rf package-lock.json",
     "lint": "concurrently \"npm run lint-apps\" \"npm run lint-server\" \"npm run lint-stories\"",
     "lint-apps": "eslint -c apps/.eslintrc --ignore-path apps/.eslintignore apps/**/*.ts",
@@ -18,7 +18,7 @@
     "link-common": "cd ./apps/common && npm link && cd ../.. && npm link atat-common",
     "unlink-common": "npm unlink atat-common && cd ./apps/common && npm unlink",
     "sync-common": "npm install ./apps/common",
-    "scripts": "node ./scripts/index.js"
+    "scripts": "node --no-deprecation ./scripts/index.js"
   },
   "husky": {
     "hooks": {
@@ -45,9 +45,10 @@
     "node-cmd": "^3.0.0",
     "node-emoji": "^1.10.0",
     "react": "^18.1.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^18.1.0",
     "socket.io": "^4.5.0",
     "socket.io-client": "^4.5.0",
+    "three-js": "^79.0.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -59,20 +60,20 @@
     "@typescript-eslint/parser": "^5.23.0",
     "concurrently": "^7.1.0",
     "cross-env": "^7.0.2",
-    "css-loader": "^3.6.0",
+    "css-loader": "^6.7.1",
     "eslint": "^8.15.0",
     "eslint-plugin-react": "^7.29.4",
     "husky": "^4.2.5",
-    "less-loader": "^6.1.3",
+    "less-loader": "^11.0.0",
     "lint-staged": "^10.2.11",
-    "mini-css-extract-plugin": "^0.9.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "terser-webpack-plugin": "^3.0.6",
-    "ts-loader": "^7.0.5",
-    "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^2.6.0",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "terser-webpack-plugin": "^5.3.1",
+    "ts-loader": "^9.3.0",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "^4.6.4",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-merge": "^4.2.2"
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-merge": "^5.8.0"
   }
 }
