--- a/apps/home/tsconfig.json
+++ b/apps/home/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "alwaysStrict": true,
+    "strictNullChecks": true,
     "experimentalDecorators": true,
     "outDir": "./dist/",
     "sourceMap": true,
