--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "react-dom": "^18.1.0",
     "socket.io": "^4.5.1",
     "socket.io-client": "^4.5.1",
-    "three-js": "^79.0.0",
+    "three": "^0.140.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -56,6 +56,7 @@
     "@babel/eslint-parser": "^7.17.0",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
+    "@types/three": "^0.140.0",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "concurrently": "^7.1.0",
