--- a/server.config
+++ b/server.config
@@ -1,7 +1,8 @@
 // Server
 MODE=development
 WEB_PORT=18080
-MAJIANG_PORT=39666
+MAJIANG_PORT=39888
+PINGPONG_PORT=39666
 WEB_BASE_FOLDER=apps
 RESOURCES_BASE_FOLDER=resources
 API_BASE_URL=api
