--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "node-emoji": "^1.10.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
     "socket.io": "^4.5.1",
     "socket.io-client": "^4.5.1",
     "three": "^0.140.2",
