--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cookie": "^0.5.0",
     "crypto-js": "^4.1.1",
     "figlet": "^1.4.0",
+    "highlight.js": "^11.5.1",
     "mysql": "^2.18.1",
     "node-cmd": "^3.0.0",
     "node-emoji": "^1.10.0",
