feat: backend html template automation, production external links management, a few improvements

--- a/apps/common/tsconfig.json
+++ b/apps/common/tsconfig.json
@@ -9,7 +9,7 @@
     "noImplicitAny": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "module": "commonjs",
+    "module": "esnext",
     "target": "es6",
     "baseUrl": ".",
     "rootDir": "src",
