--- a/apps/stories/tsconfig.json
+++ b/apps/stories/tsconfig.json
@@ -8,7 +8,7 @@
     "noImplicitAny": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "module": "commonjs",
+    "module": "esnext",
     "target": "es6",
     "jsx": "react",
     "baseUrl": ".",
