feat: improve external link management

--- a/server.config
+++ b/server.config
@@ -1,6 +1,6 @@
 // Server
-//MODE=production
-MODE=development
+MODE=production
+//MODE=development
 WEB_PORT=18080
 MAJIANG_PORT=39888
 PINGPONG_PORT=39666
