feat: use https

--- a/server.config
+++ b/server.config
@@ -1,6 +1,10 @@
 // Server
 //MODE=production
 MODE=development
+//CERT=bewhat1wannabe.tech_bundle.crt
+//KEY=bewhat1wannabe.tech.key
+CERT=local.cert
+KEY=local.key
 WEB_PORT=18080
 MAJIANG_PORT=39888
 PINGPONG_PORT=39666
