feat: redirect http link to https link

--- a/server.config
+++ b/server.config
@@ -5,7 +5,9 @@ MODE=development
 //KEY=bewhat1wannabe.tech.key
 CERT=local.cert
 KEY=local.key
-WEB_PORT=18080
+HTTP_PORT=18080
+HTTPS_PORT=18081
+
 MAJIANG_PORT=39888
 PINGPONG_PORT=39666
 WEB_BASE_FOLDER=apps
