--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "css-loader": "^6.7.1",
     "eslint": "^8.15.0",
     "eslint-plugin-react": "^7.30.0",
+    "fontmin": "^0.9.9",
     "husky": "^4.2.5",
     "less-loader": "^11.0.0",
     "lint-staged": "^10.2.11",
