--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "concurrently \"npm run lint-apps\" \"npm run lint-server\" \"npm run lint-stories\"",
     "lint-apps": "eslint -c apps/.eslintrc --ignore-path apps/.eslintignore apps/**/*.ts",
     "lint-stories": "eslint -c apps/stories/.eslintrc --ignore-path apps/stories/.eslintignore apps/stories/**/*.tsx",
+    "lint-majiang": "eslint -c apps/majiang/.eslintrc.cjs --ignore-path apps/majiang/.eslintignore apps/majiang/**/*.vue",
     "lint-server": "eslint -c .eslintrc --ignore-path .eslintignore **/*.js",
     "link-common": "cd ./apps/common && npm link && cd ../.. && npm link atat-common",
     "unlink-common": "npm unlink atat-common && cd ./apps/common && npm unlink",
@@ -29,7 +30,8 @@
   "lint-staged": {
     "**/*.js": "eslint -c .eslintrc --ignore-path .eslintignore",
     "apps/**/*.ts": "eslint -c apps/.eslintrc --ignore-path apps/.eslintignore",
-    "apps/stories/**/*.tsx": "eslint -c apps/stories/.eslintrc --ignore-path apps/stories/.eslintignore"
+    "apps/stories/**/*.tsx": "eslint -c apps/stories/.eslintrc --ignore-path apps/stories/.eslintignore",
+    "apps/majiang/**/*.vue": "eslint -c apps/majiang/.eslintrc.cjs --ignore-path apps/majiang/.eslintignore"
   },
   "keywords": [],
   "author": "Zhouyang Ye",
@@ -53,17 +55,21 @@
     "socket.io": "^4.5.1",
     "socket.io-client": "^4.5.1",
     "three": "^0.140.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.18.0",
     "@babel/eslint-parser": "^7.17.0",
+    "@rushstack/eslint-patch": "^1.1.4",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "@types/three": "^0.140.0",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
+    "@vue/eslint-config-typescript": "^11.0.0",
     "concurrently": "^7.1.0",
     "cross-env": "^7.0.2",
     "css-loader": "^6.7.1",
@@ -78,7 +84,8 @@
     "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.3.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
-    "typescript": "^4.6.4",
+    "typescript": "^4.7.4",
+    "vue-loader": "^17.0.0",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
     "webpack-merge": "^5.8.0"
