--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "concurrently \"npm run lint-apps\" \"npm run lint-server\" \"npm run lint-stories\"",
     "lint-apps": "eslint -c apps/.eslintrc --ignore-path apps/.eslintignore apps/**/*.ts",
     "lint-stories": "eslint -c apps/stories/.eslintrc --ignore-path apps/stories/.eslintignore apps/stories/**/*.tsx",
-    "lint-majiang": "eslint -c apps/majiang/.eslintrc.cjs --ignore-path apps/majiang/.eslintignore apps/majiang/**/*.vue",
+    "lint-majiang": "eslint -c apps/majiang/.eslintrc --ignore-path apps/majiang/.eslintignore apps/majiang/**/*.vue",
     "lint-server": "eslint -c .eslintrc --ignore-path .eslintignore **/*.js",
     "link-common": "cd ./apps/common && npm link && cd ../.. && npm link atat-common",
     "unlink-common": "npm unlink atat-common && cd ./apps/common && npm unlink",
@@ -31,7 +31,7 @@
     "**/*.js": "eslint -c .eslintrc --ignore-path .eslintignore",
     "apps/**/*.ts": "eslint -c apps/.eslintrc --ignore-path apps/.eslintignore",
     "apps/stories/**/*.tsx": "eslint -c apps/stories/.eslintrc --ignore-path apps/stories/.eslintignore",
-    "apps/majiang/**/*.vue": "eslint -c apps/majiang/.eslintrc.cjs --ignore-path apps/majiang/.eslintignore"
+    "apps/majiang/**/*.vue": "eslint -c apps/majiang/.eslintrc --ignore-path apps/majiang/.eslintignore"
   },
   "keywords": [],
   "author": "Zhouyang Ye",
@@ -62,19 +62,18 @@
   "devDependencies": {
     "@babel/core": "^7.18.0",
     "@babel/eslint-parser": "^7.17.0",
-    "@rushstack/eslint-patch": "^1.1.4",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "@types/three": "^0.140.0",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
-    "@vue/eslint-config-typescript": "^11.0.0",
     "concurrently": "^7.1.0",
     "cross-env": "^7.0.2",
     "css-loader": "^6.7.1",
     "eslint": "^8.15.0",
     "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-vue": "^9.3.0",
     "fontmin": "^0.9.9",
     "husky": "^4.2.5",
     "less-loader": "^11.0.0",
