--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cookie": "^0.5.0",
     "crypto-js": "^4.1.1",
     "figlet": "^1.4.0",
+    "gl-matrix": "^3.4.3",
     "highlight.js": "^11.5.1",
     "mysql": "^2.18.1",
     "node-cmd": "^5.0.0",
